fixed img disalingment and newsless size issues on narrow screens

--- a/src/components/joinus/JoinUs.css
+++ b/src/components/joinus/JoinUs.css
@@ -12,6 +12,6 @@
   .join-us-img {
     margin: 0;
     object-fit: cover;
-    width: 310px;
+    width: 100%;
   }
 }
