--- a/src/pages/learn-more/components/LearnMoreHeader.css
+++ b/src/pages/learn-more/components/LearnMoreHeader.css
@@ -4,3 +4,17 @@
 .text-brown{
   color: var(--brown);
 }
+
+.hero-container {
+  display: flex;
+  flex-direction: row;
+
+  align-self: center;
+  align-items: center;
+  justify-content: center;
+}
+ 
+.hero-img {
+  width: 100%;
+  padding: 20px;
+}
